:lipstick: dark mode buttons magin fixed

--- a/src/pages/darkmode/DarkMode.scss
+++ b/src/pages/darkmode/DarkMode.scss
@@ -3,12 +3,12 @@
     font-size: 2.5rem;
     display: flex;
     justify-content: end;
-    padding: 5px 10%;
-    
+    padding: 10px 10%;
+        
     svg {
         width: 2.3rem;
         border-radius: 50%;
-        margin: 5px 2%;
+        margin: 5px .5rem;
     }
 
     .dark {
@@ -26,8 +26,18 @@
     }
 }
 
+@media (max-width: 800px) {
+    .containerDarkMode{
+        font-size: 2rem;
+        margin-bottom: 25px;
+    }
+}
+
 @media (max-width: 420px) {
     .containerDarkMode {
-        font-size: 2rem;
+        font-size: 1.8rem;
+        svg{
+            margin: 5px;
+        }
     }
 }
